
This file shows the changes in recent releases of MODx. The most current release is usually the 
development release, and is only shown to give an idea of what's currently in the pipeline.

MODx Revolution 2.0.0-rc-3 ($LastChangedRevision$, $LastChangedDate$)
====================================
- [#MODX-2056] Fixed CSS for topmenu, restyled to add contrast and enhanced
- Cleaned up TV display panel, removed TV reload button, extended fields all the way across
- [#MODX-1832] moved "Set to Default" to a fade-in icon
- Prepared code for oncoming feature to move TVs into other tabs
- Removed credits from about pane, consolidated tabs
- Fixed permissions checks on resource tree context menu when policies are limited
- Added prefix filtering to modLexicon::fetch
- Added modTemplateVar::getDisplayParams for easier fetching of display_params for a TV
- Fixed bug with custom TV render paths
- Added phpThumb to core, added connector for secure access, integrated into MODx.Browser
- Ensure categories in TV panel are sorted alphanumerically
- Added stripString, cdata, replace, fuzzydate and ago output filters
- [#MODX-2045] Added ExtJS, Smarty, PHPMailer, MagpieRSS version into System info
- [#MODX-2057] Fixed bugs with action/menu trees
- Fixed bug with is_writable check in setup; was checking core/config rather than just core/config/config.inc.php
- [#MODX-2042] Fixed extra beginning slash for image/file TVs
- Add validation to processors for Chunks, Plugins, Snippets, and Template Variables
- [#MODX-1998] Disallow reserved Template Variable names (i.e. Resource field names)
- [#MODX-2033] Fix bug with unchecking Template Variable access when editing a Template
- Have modX::switchContext() update placeholders from config on successful switch
- [#MODX-1774] Remove redundant setting of placeholders from modX::$config in modRequest::handleRequest()
- [#MODX-2031] Fix modX::stripTags() and modX::sanitize() to properly strip nested element tags